--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kmac_enterprises.chialphaapp">
 
@@ -13,10 +12,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".LoginActivity">
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,9 +30,9 @@
 
         <activity android:name=".SignUpActivity"
             android:parentActivityName=".LoginActivity">
-            
+
         </activity>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
-
 </manifest>
